# metavita

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_init.py  0002_knowledge.py  0003_build.py  0004_runs.py  0005_deployments.py  0006_auth.py  0007_settings.py  0008_evals.py  0009_tools_prompts_dsar.py  0010_connections.py  0011_connection_slots.py  0012_notifications.py  0013_dimensionless_vectors.py  0014_invitations.py  0015_password_resets.py  0016_user_profile.py
apps/api/src/metavita_api/: __init__.py  config.py  db.py  deps.py  factory.py  main.py  models.py  repositories.py  storage.py  tasks.py  vectorstore.py
apps/api/src/metavita_api/connectors/: __init__.py  base.py  web.py
apps/api/src/metavita_api/integrations/: __init__.py  base.py  catalog.py  testers.py
apps/api/src/metavita_api/routes/: agents.py  auth.py  compliance.py  connections.py  deployments.py  email.py  evals.py  health.py  ingest.py  invites.py  knowledge.py  notifications.py  overview.py  pipelines.py  prompts.py  query.py  runs.py  serve.py  settings.py  tools.py  widget.py
apps/api/src/metavita_api/security/: __init__.py  encryption.py  factory.py  keys.py  passwords.py  scanning.py  tokens.py
apps/api/src/metavita_api/services/: __init__.py  agent.py  analytics.py  crawl.py  ingest_job.py  mailer.py  notify.py  resolve.py  run.py  scoring.py  video.py
apps/api/src/metavita_api/static/: widget.js
apps/api/src/metavita_api/vectorstores/: __init__.py  _rest.py  chroma.py  factory.py  moss.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
apps/api/tests/: test_agent_executor.py  test_analytics.py  test_auth_utils.py  test_encryption.py  test_integration_db.py  test_integrations_catalog.py  test_invites.py  test_keys.py  test_mailer.py  test_object_store.py  test_run_service.py  test_scoring.py  test_upload_safety.py  test_vectorstores.py  test_video_service.py  test_web_connector.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx  theme.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/metavita_worker/: __init__.py  worker.py
docs/: architecture.md  product-spec.md  remaining-roadmap.md
infra/docker/: docker-compose.prod.yml  docker-compose.yml
scripts/: byo_e2e.py
(+92 files in other folders)
