[project]
name = "metavita-api"
version = "0.0.0"
description = "MetaVita API gateway (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "metavita-runtime",
    "metavita-providers",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "clamd>=1.0.2",
    "filetype>=1.2",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metavita_api"]
